fix: bg color & font color

--- a/src/styles/components/Music.module.scss
+++ b/src/styles/components/Music.module.scss
@@ -1,8 +1,8 @@
-.artist_card {
+.music_card {
   cursor: pointer;
-  margin: 10px;
+  margin: 30px;
   background-color: #f7f4f2;
   border-radius: 20px;
-  width: 200px;
-  height: 200px;
+  width: 500px;
+  height: 300px;
 }
