--- a/src/styles/pages/Request.module.scss
+++ b/src/styles/pages/Request.module.scss
@@ -11,26 +11,36 @@
     width: 600px;
     inline-height: 400px;
     vertical-align: middle;
-    label {
-      font-size: 18px;
-    }
-    input {
-      margin: 20px 0;
-      width: 300px;
-      height: 30px;
-    }
-    button {
-      background-color: #e65b20;
-      color: #484443;
-      border: none;
-      border-radius: 20px;
-      cursor: pointer;
-      outline: none;
-      height: 50px;
-      width: 100px;
-      padding: 0;
-      bottom: 0;
-      appearance: none;
+    .wrapper {
+      padding: 40px 0;
+      position: relative;
+      height: 100%;
+      label {
+        font-size: 18px;
+      }
+      input {
+        margin: 20px 0;
+        width: 300px;
+        height: 30px;
+      }
+      button {
+        position: absolute;
+        background-color: #e65b20;
+        color: #484443;
+        border: none;
+        border-radius: 20px;
+        cursor: pointer;
+        outline: none;
+        height: 50px;
+        width: 100px;
+        padding: 0;
+        appearance: none;
+        bottom: 100px;
+        right: 250px;
+        &:hover {
+          box-shadow: 0 0 4px #e65b20;
+        }
+      }
     }
   }
 }
