add: loading component

--- a/src/styles/pages/Language.module.scss
+++ b/src/styles/pages/Language.module.scss
@@ -13,5 +13,9 @@
     appearance: none;
     font-size: 48px;
     color: #3e1300;
+    transition: all 1s;
+    &:hover {
+      color: #e65b20;
+    }
   }
 }
