fix: Changed the layout of the request page.

--- a/frontend/src/styles/pages/Request.module.scss
+++ b/frontend/src/styles/pages/Request.module.scss
@@ -1,3 +1,12 @@
+.header {
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+  header {
+    font-size: 24px;
+    color: #484443;
+  }
+}
 .container {
   width: 100%;
   height: 600px;
