--- a/frontend/src/styles/components/SearchForm.module.scss
+++ b/frontend/src/styles/components/SearchForm.module.scss
@@ -7,6 +7,7 @@
     border: solid 1px #3e1300;
     input {
       border: none;
+      outline: none;
       border-radius: 10px;
       height: 50px;
       width: 184px;
