add: Added the ability to reset the characters entered in a form

--- a/frontend/src/styles/components/SearchForm.module.scss
+++ b/frontend/src/styles/components/SearchForm.module.scss
@@ -1,16 +1,24 @@
 .search_container {
   margin-left: 20px;
   .search_form {
-    width: 200px;
+    width: 240px;
     background-color: #fff;
     border-radius: 10px;
     border: solid 1px #3e1300;
-    input {
-      border: none;
-      outline: none;
-      border-radius: 10px;
-      height: 50px;
-      width: 184px;
+    label {
+      input {
+        border: none;
+        outline: none;
+        border-radius: 10px;
+        height: 50px;
+        width: 190px;
+      }
+      span {
+        line-height: 50px;
+        vertical-align: middle;
+        float: right;
+        margin-right: 5px;
+      }
     }
   }
 }
