--- a/frontend/src/styles/components/SongInfo.module.scss
+++ b/frontend/src/styles/components/SongInfo.module.scss
@@ -5,6 +5,10 @@
   border-radius: 20px;
   width: 200px;
   height: 200px;
+  img {
+    border-radius: 20px;
+    object-fit: cover;
+  }
   p {
     font-family: 'Cormorant Garamond',serif;
   }
