--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -15,3 +15,12 @@ a {
   margin: 0;
   padding: 0;
 }
+
+:root {
+  --white-1: #f7f4f2;
+  --white-2: #d1cbc3;
+  --font-1: #3e1300;
+  --font-2: #e65b20;
+  --font-3: #484443;
+  --heart: #CC3333;
+}
