--- a/frontend/src/styles/components/ArtistInfo.module.scss
+++ b/frontend/src/styles/components/ArtistInfo.module.scss
@@ -1,10 +1,17 @@
+@import '../variables.scss';
+
+
 .artist_card {
   cursor: pointer;
   margin: 10px;
   border-radius: 20px;
-  background-color: #f7f4f2;
+  background-color: var(--white-1);
   width: 200px;
   height: 200px;
+  @include mq(md) {
+    width: 100px;
+    height: 100px;
+  }
   img {
     border-radius: 20px;
     object-fit: cover;
