--- a/frontend/src/styles/components/Layout.module.scss
+++ b/frontend/src/styles/components/Layout.module.scss
@@ -1,13 +1,25 @@
+@import '../variables.scss';
+
 .layout {
+  height: 100vh;
   display: flex;
-  background-color: #d1cbc3;
+  background-color: var(--white-2);
+  @include mq(md) {
+    display: block;
+  }
   .layout_sidebar {
     position: sticky;
     top: 0;
     width: 280px;
     height: 100vh;
     overflow-y: auto;
-    border-right: solid 1px #eee;
+    border-right: solid 1px var(--white-1);
+    @include mq(md) {
+      position: static;
+      width: 100%;
+      height: 170px;
+      overflow-y: unset;
+    }
   }
   .layout_content {
     min-width: 375px;
