--- a/frontend/src/styles/components/Loading.module.scss
+++ b/frontend/src/styles/components/Loading.module.scss
@@ -1,13 +1,18 @@
+@import '../variables.scss';
+
 .container {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   .heart {
     position: relative;
     width: 100px;
     height: 90px;
     top: 50%;
     animation: heartbeat 1s infinite;
-    margin: 0 auto
+    margin: 0 auto;
+    @include mq(md) {
+      top: 200px;
+    }
   }
   .heart:before,
   .heart:after {
@@ -17,7 +22,7 @@
     top: 0;
     width: 50px;
     height: 80px;
-    background: #CC3333;
+    background: var(--heart);
     -moz-border-radius: 50px 50px 0 0;
     border-radius: 50px 50px 0 0;
     -webkit-transform: rotate(-45deg);
