--- a/frontend/src/styles/components/Sidebar.module.scss
+++ b/frontend/src/styles/components/Sidebar.module.scss
@@ -1,55 +1,85 @@
-.header {
-  text-align: center;
-  font-size: 36px;
-  font-weight: bold;
-  width: 280px;
-  color: #3e1300;
-}
-.sidebar_item {
-  width: 100%;
-  padding-left: 20px;
-  text-decoration: none;
-  list-style: none;
-  animation: fadeIn ease 1s;
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-      padding-left: 0;
+@import '../variables.scss';
+
+.container {
+  @include mq(md) {
+    margin-left: 30px;
+  }
+  .top {
+    @include mq(md) {
+      display: flex;
     }
-    100% {
-      opacity: 1;
-      padding-left: 20px;
+    .header {
+      text-align: center;
+      font-size: 36px;
+      font-weight: bold;
+      width: 280px;
+      color: var(--font-1);
+      @include mq(md) {
+        width: 100px;
+        font-size: 24px;
+      }
     }
   }
-  .sidebar_nav_item {
-    height: 75px;
-    line-height: 75px;
-    vertical-align: middle;
-    .sidebar_content {
-      cursor: pointer;
-      font-size: 24px;
-      font-weight: bold;
-      font-family: 'Cormorant Garamond', serif;
-      color: #3e1300;
-      transition: all 1s;
-      &:hover {
-        color: #e65b20;
+  .sidebar_item {
+    width: 100%;
+    padding-left: 20px;
+    text-decoration: none;
+    list-style: none;
+    animation: fadeIn ease 1s;
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+        padding-left: 0;
+      }
+      100% {
+        opacity: 1;
         padding-left: 20px;
       }
     }
-    .active {
-      color: #e65b20;
-      position: relative;
-      padding-left: 20px;
-      &::before {
-        content: "";
-        display: block;
-        position: absolute;
-        width: 30px;
-        height: 1px;
-        top: 12px;
-        left: -15px;
-        border-bottom: 1px solid #e65b20;
+    @include mq(md) {
+      padding-left: 0;
+      animation: none;
+    }
+    .sidebar_nav_item {
+      height: 75px;
+      line-height: 75px;
+      vertical-align: middle;
+      @include mq(md) {
+        height: 25px;
+        line-height: 25px;
+      }
+      .sidebar_content {
+        cursor: pointer;
+        font-size: 24px;
+        font-weight: bold;
+        font-family: 'Cormorant Garamond', serif;
+        color: var(--font-1);
+        transition: all 1s;
+        @include mq(md) {
+          font-size: 12px;
+        }
+        &:hover {
+          color: var(--font-2);
+          padding-left: 20px;
+        }
+      }
+      .active {
+        color: var(--font-2);
+        position: relative;
+        padding-left: 20px;
+        &::before {
+          content: "";
+          display: block;
+          position: absolute;
+          width: 30px;
+          height: 1px;
+          top: 12px;
+          left: -15px;
+          border-bottom: 1px solid var(--font-2);
+          @include mq(md) {
+            top: 6px;
+          }
+        }
       }
     }
   }
