--- a/frontend/src/styles/pages/Request.module.scss
+++ b/frontend/src/styles/pages/Request.module.scss
@@ -1,3 +1,5 @@
+@import '../variables.scss';
+
 .header {
   width: 100%;
   text-align: center;
@@ -5,25 +7,29 @@
   header {
     font-size: 24px;
     color: #484443;
+    @include mq(md) {
+      font-size: 12px;
+    }
   }
 }
 .container {
   width: 100%;
   height: 600px;
-  color: #d6d0d0;
+  background-color: var(--white-2);
+  color: var(--white-1);
   form {
     text-align: center;
-    margin: 40px auto;
-    border-radius: 20px;
-    background-color: #484443;
+    margin: 40px auto 0 auto;
     height: 100%;
     width: 600px;
-    inline-height: 400px;
     vertical-align: middle;
+    @include mq(md) {
+      width: 400px;
+    }
     .wrapper {
-      padding: 40px 0;
-      position: relative;
-      height: 100%;
+      border-radius: 20px;
+      background-color: var(--font-3);
+      padding: 20px 0;
       label {
         font-size: 18px;
       }
@@ -33,9 +39,9 @@
         height: 30px;
       }
       button {
-        position: absolute;
-        background-color: #e65b20;
-        color: #484443;
+        margin-top: 20px;
+        background-color: var(--font-2);
+        color: var(--font-3);
         border: none;
         border-radius: 20px;
         cursor: pointer;
@@ -45,9 +51,8 @@
         padding: 0;
         appearance: none;
         bottom: 100px;
-        right: 250px;
         &:hover {
-          box-shadow: 0 0 4px #e65b20;
+          box-shadow: 0 0 4px var(--font-2);
         }
       }
     }
