add: zenn-markdown

--- a/frontend/src/styles/pages/Artist.module.scss
+++ b/frontend/src/styles/pages/Artist.module.scss
@@ -1,11 +1,11 @@
 .header {
   width: 100%;
-  p {
+  .artist_name {
     font-size: 48px;
     color: #3e1300;
     margin: 30px 0 0 30px;
   }
-  article {
+  .container {
     padding: 0 25px;
     width: 100%;
   }
